# aqualog-frontend

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  skills-lock.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.js  vite.config.ts
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build_container.yaml  bumpversion.yaml
backend/: main.py
openspec/: config.yaml
openspec/changes/aquarium-management-portal/: design.md  tasks.md
openspec/changes/dashboard-homepage/: design.md  proposal.md  tasks.md
openspec/changes/double-navbar-left-layout/: proposal.md
openspec/specs/api-connectivity-and-configuration/: spec.md
openspec/specs/aquarium-management-workflows/: spec.md
openspec/specs/aquarium-measurement-tracking/: spec.md
openspec/specs/dashboard-homepage/: spec.md
openspec/specs/identity-authentication-and-onboarding/: spec.md
openspec/specs/portal-shell-and-navigation/: spec.md
public/: site.webmanifest
src/: App.tsx  config.ts  main.tsx  vite-env.d.ts
src/api/: aquariums.ts  client.ts  measurements.ts  salinity.ts
src/auth/: OidcProvider.tsx  authErrorMessaging.ts
src/components/: BottomNav.tsx  Shell.tsx  primaryNav.ts
src/components/ui/: provider.tsx
src/hooks/: useReadinessCheck.ts
src/pages/: AquariumsPage.tsx  AuthCallbackPage.tsx  CalculatorPage.tsx  ConfigErrorPage.tsx  DashboardPage.tsx  MeasurementsPage.tsx  NotFoundPage.tsx
src/test/: config.test.ts  setup.ts
tools/: setup.sh
(+42 files in other folders)
